--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nathan's Nest</title>
+    <title>Nathan's Nest: {% block title %}{% endblock %}</title>
 </head>
 <body>
-    
+    {% block content %}{% endblock %}
 </body>
 </html>
