--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@ Home
             <legend>System</legend>
             <input type="radio" id="ac" name="system" value="AC">
             <label for="ac">AC</label>
-            <input type="radio" id="off" name="system" value="OFF" checked>
+            <input type="radio" id="sys_off" name="system" value="OFF" checked>
             <label for="off">OFF</label>
             <input type="radio" id="heat" name="system" value="HEAT">
             <label for="heat">HEAT</label>
@@ -32,6 +32,14 @@ Home
             <label for="fanOff">OFF</label>
             <input type="radio" id="fanAuto" name="fan" value="AUTO" checked>
             <label for="fanAuto">AUTO</label>
+        </fieldset>
+
+        <fieldset>
+            <legend>Schedule</legend>
+            <input type="radio" id="schedule_on" name="schedule" value="ON">
+            <label for="ac">ON</label>
+            <input type="radio" id="schedule_off" name="schedule" value="OFF" checked>
+            <label for="off">OFF</label>
         </fieldset>
         
         <button type="button" id="updateButton">Update</button>
