--- a/templates/index.html
+++ b/templates/index.html
@@ -6,19 +6,55 @@ Home
 {% endblock %}
 
 {% block content %}
+    <script>
+        window.addEventListener('load', function() {
+            // Get the value of the system radio button from the server
+            var systemValue = "{{ system }}";
+            // Get the value of the fan radio button from the server
+            var fanValue = "{{ fan }}";
+            // Get the value of the schedule radio button from the server
+            var scheduleValue = "{{ schedule }}";
+            
+            // Check the correct system radio button
+            var systemRadios = document.getElementsByName('system');
+            for (var i = 0; i < systemRadios.length; i++) {
+                if (systemRadios[i].value === systemValue) {
+                    systemRadios[i].checked = true;
+                }
+            }
+            
+            // Check the correct fan radio button
+            var fanRadios = document.getElementsByName('fan');
+            for (var i = 0; i < fanRadios.length; i++) {
+                if (fanRadios[i].value === fanValue) {
+                    fanRadios[i].checked = true;
+                }
+            }
+
+            // Check the correct schedule radio button
+            var scheduleRadios = document.getElementsByName('schedule');
+            for (var i = 0; i < scheduleRadios.length; i++) {
+                if (scheduleRadios[i].value === scheduleValue) {
+                    scheduleRadios[i].checked = true;
+                }
+            }
+        });
+    </script>
+
     <h1>Temperature Control</h1>
 
-    <p>Current Temperature: <span id="currentTemperature">20</span>°F</p>
+    <p>Current Temperature: °F</p>
+    <p>Current Setpoint: {{setpoint}}°F</p>
 
-    <form id="temperatureControlForm">
-        <label for="setpointTemperature">Setpoint Temperature (°C):</label>
+    <form id="temperatureControlForm" action="/" method="POST">
+        <label for="setpointTemperature">Setpoint Temperature (°F):</label>
         <input type="number" id="setpointTemperature" name="setpointTemperature" step="1" min="0">
         
         <fieldset>
             <legend>System</legend>
             <input type="radio" id="ac" name="system" value="AC">
             <label for="ac">AC</label>
-            <input type="radio" id="sys_off" name="system" value="OFF" checked>
+            <input type="radio" id="sys_off" name="system" value="OFF">
             <label for="off">OFF</label>
             <input type="radio" id="heat" name="system" value="HEAT">
             <label for="heat">HEAT</label>
@@ -30,7 +66,7 @@ Home
             <label for="fanOn">ON</label>
             <input type="radio" id="fanOff" name="fan" value="OFF">
             <label for="fanOff">OFF</label>
-            <input type="radio" id="fanAuto" name="fan" value="AUTO" checked>
+            <input type="radio" id="fanAuto" name="fan" value="AUTO">
             <label for="fanAuto">AUTO</label>
         </fieldset>
 
@@ -38,10 +74,10 @@ Home
             <legend>Schedule</legend>
             <input type="radio" id="schedule_on" name="schedule" value="ON">
             <label for="ac">ON</label>
-            <input type="radio" id="schedule_off" name="schedule" value="OFF" checked>
+            <input type="radio" id="schedule_off" name="schedule" value="OFF">
             <label for="off">OFF</label>
         </fieldset>
         
-        <button type="button" id="updateButton">Update</button>
+        <button type="submit" id="updateButton">Update</button>
     </form>
 {% endblock %}
