allowed index.html form to submit without a given setpoint

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@ Home
 
     <p>Current Temperature: °F</p>
     <p>Current Setpoint: {{setpoint}}°F</p>
+    <p>Current Scheduled Setpoint: {{schedule_setpoint}}</p>
 
     <form id="temperatureControlForm" action="/" method="POST">
         <label for="setpointTemperature">Setpoint Temperature (°F):</label>
