--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@ Home
 
     <h1>Temperature Control</h1>
 
-    <p>Current Temperature: °F</p>
+    <p>Current Temperature: {{curr_temp}}°F</p>
     <p>Current Setpoint: {{setpoint}}°F</p>
     <p>Current Scheduled Setpoint: {{schedule_setpoint}}</p>
 
