--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@ Home
     <h1>Temperature Control</h1>
 
     <p>Current Temperature: {{curr_temp}}°F</p>
+    <p>Current Humidity: {{humidity}}%</p>
     <p>Current Setpoint: {{setpoint}}°F</p>
     <p>Current Scheduled Setpoint: {{schedule_setpoint}}</p>
 
