--- a/static/style.css
+++ b/static/style.css
@@ -24,3 +24,74 @@
 #scheduleTable tr:hover {
   background-color: #ddd;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.container {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.large-text {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.small-text {
+  font-size: 1.2em;
+}
+
+.radio-buttons {
+  margin-top: 20px;
+}
+
+.radio-buttons label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.update-form {
+  margin-top: 20px;
+}
+
+.update-form label {
+  font-size: 1.2em;
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
+}
