--- a/templates/index.html
+++ b/templates/index.html
@@ -8,45 +8,54 @@ Home
 
 {% block content %}
 
-    <h1>Temperature Control</h1>
-
-    <p>Current Temperature: {{curr_temp}}°F</p>
-    <p>Current Humidity: {{humidity}}%</p>
-    <p>Current Setpoint: {{setpoint}}°F</p>
-    <p>Current Scheduled Setpoint: {{schedule_setpoint}}</p>
-
-    <form id="temperatureControlForm" action="/" method="POST">
-        <label for="setpointTemperature">Setpoint Temperature (°F):</label>
-        <input type="number" id="setpointTemperature" name="setpointTemperature" step="1" min="0">
-        
-        <fieldset>
-            <legend>System</legend>
-            <input type="radio" id="ac" name="system" value="AC">
-            <label for="ac">AC</label>
-            <input type="radio" id="sys_off" name="system" value="OFF">
-            <label for="off">OFF</label>
-            <input type="radio" id="heat" name="system" value="HEAT">
-            <label for="heat">HEAT</label>
-        </fieldset>
-        
-        <fieldset>
-            <legend>Fan</legend>
-            <input type="radio" id="fanOn" name="fan" value="ON">
-            <label for="fanOn">ON</label>
-            <input type="radio" id="fanAuto" name="fan" value="AUTO">
-            <label for="fanAuto">AUTO</label>
-        </fieldset>
-
-        <fieldset>
-            <legend>Schedule</legend>
-            <input type="radio" id="schedule_on" name="schedule" value="ON">
-            <label for="ac">ON</label>
-            <input type="radio" id="schedule_off" name="schedule" value="OFF">
-            <label for="off">OFF</label>
-        </fieldset>
-        
-        <button type="submit" id="updateButton">Update</button>
-    </form>
+    <div class="container">
+        <div class="temperature-container">
+            <div class="large-text">
+                <span id="current-temperature">{{curr_temp}}°F</span>
+                <span id="current-humidity">{{humidity}}%</span>
+            </div>
+            <div class="small-text">
+                <span id="setpoint">Setpoint: {{setpoint}}</span>
+                <span id="schedule-setpoint">Scheduled Setpoint: {{schedule_setpoint}}</span>
+            </div>
+        </div>
+        <form id="temperatureControlForm" action="/" method="POST">
+            <fieldset class="radio-buttons">
+                <legend>System</legend>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="ac" name="system" value="AC">
+                    <label class="form-check-label" for="ac">AC</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="sys_off" name="system" value="OFF">
+                    <label class="form-check-label" for="sys_off">OFF</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="heat" name="system" value="HEAT">
+                    <label class="form-check-label" for="heat">HEAT</label>
+                </div>
+            </fieldset>
+            
+            <fieldset class="radio-buttons">
+                <legend>Fan</legend>
+                <input type="radio" id="fanOn" name="fan" value="ON">
+                <label for="fanOn">ON</label>
+                <input type="radio" id="fanAuto" name="fan" value="AUTO">
+                <label for="fanAuto">AUTO</label>
+            </fieldset>
+    
+            <fieldset class="radio-buttons">
+                <legend>Schedule</legend>
+                <input type="radio" id="schedule_on" name="schedule" value="ON">
+                <label for="ac">ON</label>
+                <input type="radio" id="schedule_off" name="schedule" value="OFF">
+                <label for="off">OFF</label>
+            </fieldset>
+            
+            <input type="number" id="setpointTemperature" name="setpointTemperature" placeholder="Enter new temperature" step="1" min="0">
+            <input type="submit" id="updateButton">
+        </form>
+    </div>
 
 
 <!-- Check current radio buttons according to JSON files -->
