--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -6,7 +6,30 @@ Schedule
 
 {% block content %}
 
+<!-- Update Schedule JSON -->
+<div id="update-schedule-container">
+    <h2 class="scheudle-title">Update Schedule</h2>
+    <form id="updateScheculeForm" action="/schedule" method="POST">
+        <label>Start Time: </label>
+        <select class="select-time" id="start_time" name="start_time">
+            {% for time in times %}
+            <option value={{time}}>{{time}}</option>
+            {% endfor %}
+        </select>
 
+        <label>End Time: </label>
+        <select class="select-time" id="end_time" name="end_time">
+            {% for time in times %}
+            <option value={{time}}>{{time}}</option>
+            {% endfor %}
+        </select>
+        <div>
+        <label>Setpoint Temp: </label>
+            <input type="number" id="temperature_setpoint" name="temperature_setpoint" placeholder="Enter Temperature">
+            <input type="submit" id="updateScheduleButton"> 
+        </div> 
+    </form>
+</div>
 
 <!-- Read current schedule -->
 <h2>Current Schedule</h2>
@@ -22,29 +45,5 @@ Schedule
     </tr>
     {% endfor %}
 </table>
-
-<!-- Update Schedule JSON -->
-<h2>Update Schedule</h2>
-<form id="updateScheculeForm" action="/schedule" method="POST">
-    <label>Start Time: </label>
-    <select id="start_time" name="start_time">
-        {% for time in times %}
-        <option value={{time}}>{{time}}</option>
-        {% endfor %}
-    </select>
-
-    <label>End Time: </label>
-    <select id="end_time" name="end_time">
-        {% for time in times %}
-        <option value={{time}}>{{time}}</option>
-        {% endfor %}
-    </select>
-
-    <label>Setpoint Temp: </label>
-    <input type="number" id="temperature_setpoint" name="temperature_setpoint" placeholder="Enter Temperature">
-    <button type="submit" id="updateScheduleButton">Submit</button>   
-</form>
-
-<br><br>
 
 {% endblock %}
