--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -32,18 +32,41 @@ Schedule
 </div>
 
 <!-- Read current schedule -->
-<h2>Current Schedule</h2>
-<table id="scheduleTable">
-    <tr>
-        <th>Time</th>
-        <th>Temperature</th>
-    </tr>
-    {% for time, setpoint in schedule.items() %}
-    <tr>
-        <td>{{time}}</td>
-        <td>{{setpoint}} F</td>
-    </tr>
-    {% endfor %}
-</table>
+<h1>Current Schedule</h1>
+<div class="col-xs-6">
+    <h2 class="sub-header">AM</h2>
+    <div class="table-responsive">
+        <table id="table table-striped">
+            <tr>
+                <th class="col-md-1">Time</th>
+                <th class="col-md-2">Temperature</th>
+            </tr>
+            {% for time, setpoint in schedule.items() %}
+            <tr>
+                <td class="col-md-1">{{time}}</td>
+                <td class="col-md-2">{{setpoint}} F</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+<div class="col-xs-6">
+    <h2 class="sub-header">PM</h2>
+    <div class="table-responsive">
+        <table id="table table-striped">
+            <tr>
+                <th class="col-md-1">Time</th>
+                <th class="col-md-2">Temperature</th>
+            </tr>
+            {% for time, setpoint in schedule.items() %}
+            <tr>
+                <td class="col-md-1">{{time}}</td>
+                <td class="col-md-2">{{setpoint}} F</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+
 
 {% endblock %}
