--- a/static/style.css
+++ b/static/style.css
@@ -1,30 +1,3 @@
-#scheduleTable {
-  border-collapse: collapse;
-  margin: 0 auto;
-  width: 60%;
-}
-
-#scheduleTable th {
-  background-color: #333;
-  color: #fff;
-  padding: 8px;
-  text-align: left;
-}
-
-#scheduleTable tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#scheduleTable td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  width: 50%;
-}
-
-#scheduleTable tr:hover {
-  background-color: #ddd;
-}
-
 #temperatureControlForm{
   margin: 0 auto;
 }
@@ -56,6 +29,7 @@
   color: #333;
 }
 
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
@@ -66,11 +40,15 @@ body {
   height: 100vh;
 }
 
+
 .container {
   background-color: #ffffff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
