--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -6,8 +6,8 @@ Schedule
 
 {% block content %}
 
-<!-- Update Schedule JSON -->
-<div id="update-schedule-container">
+<!-- Update Schedule form for schedule.JSON -->
+<div class="container">
     <h2 class="scheudle-title">Update Schedule</h2>
     <form id="updateScheculeForm" action="/schedule" method="POST">
         <label>Start Time: </label>
@@ -31,41 +31,29 @@ Schedule
     </form>
 </div>
 
-<!-- Read current schedule -->
+<!-- List current schedule in two tables AM & PM -->
+<div class="container">
 <h1>Current Schedule</h1>
 <div class="col-xs-6">
-    <h2 class="sub-header">AM</h2>
     <div class="table-responsive">
-        <table id="table table-striped">
-            <tr>
-                <th class="col-md-1">Time</th>
-                <th class="col-md-2">Temperature</th>
-            </tr>
-            {% for time, setpoint in schedule.items() %}
-            <tr>
-                <td class="col-md-1">{{time}}</td>
-                <td class="col-md-2">{{setpoint}} F</td>
-            </tr>
-            {% endfor %}
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th class="col-md-1">Time</th>
+                    <th class="col-md-2">Temperature</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for time, setpoint in schedule.items() %}
+                <tr>
+                    <td class="col-md-1">{{time}}</td>
+                    <td class="col-md-2">{{setpoint}} F</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
 </div>
-<div class="col-xs-6">
-    <h2 class="sub-header">PM</h2>
-    <div class="table-responsive">
-        <table id="table table-striped">
-            <tr>
-                <th class="col-md-1">Time</th>
-                <th class="col-md-2">Temperature</th>
-            </tr>
-            {% for time, setpoint in schedule.items() %}
-            <tr>
-                <td class="col-md-1">{{time}}</td>
-                <td class="col-md-2">{{setpoint}} F</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
 </div>
 
 
