changed path to style.css to absolute

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
     <!-- style.css via relative path -->
     <link rel="stylesheet" type="text/css" href="../static/style.css">
     <!-- refrence script.js via relative path -->
-    <script src="../static/script.js"></script>
+    <script src="home/pi/Documents/static/script.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
