--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,9 @@
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- style.css via relative path -->
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <link rel="stylesheet" type="text/css" href="home/pi/Documents/cs50_final_project/static/style.css">
     <!-- refrence script.js via relative path -->
-    <script src="home/pi/Documents/static/script.js"></script>
+    <script src="../static/script.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
