changed style.css refrence to absolute

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- style.css via relative path -->
-    <link rel="stylesheet" type="text/css" href="home/pi/Documents/cs50_final_project/static/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
     <!-- refrence script.js via relative path -->
     <script src="../static/script.js"></script>
 </head>
